# neardata-server

./: .gitignore  Cargo.toml  README.md
openapi/: openapi.yaml
src/: api.rs  cache.rs  lib.rs  main.rs  openapi.rs  reader.rs  types.rs
static/: index.html  skill.md
