[package]
name = "neardata-server"
version = "0.9.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis = { version = "0.25.3", features = [
    "tokio-comp",
    "tokio-native-tls-comp",
    "streams",
] }
tokio = { version = "1.36.0", features = ["full", "tracing"] }
tracing-actix-web = "0.7.9"
reqwest = { version = "0.11.24", features = ["json"] }
openssl-probe = "0.1.5"
tar = "0.4"
flate2 = "1.0"
